# speexdsp

./: .gitignore  CMakeLists.txt
include/speex/: speex_echo.h  speex_jitter.h  speex_preprocess.h  speex_resampler.h  speexdsp_types.h
libspeexdsp/: CMakeLists.txt  preprocess.c
win32/: config.h
